fixed some bugs and cleaned up the code
I accidentally renamed the rb variable in the fish movement script to rigidBody. oops.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ crashlytics-build.properties
 /[Aa]ssets/.DS_Store
 Packages/manifest.json
 Packages/packages-lock.json
+.idea/.idea.monkey-swim/.idea/indexLayout.xml
+.idea/.idea.monkey-swim/.idea/vcs.xml
