Reformatted some files

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Packages/manifest.json
 Packages/packages-lock.json
 .idea/.idea.monkey-swim/.idea/indexLayout.xml
 .idea/.idea.monkey-swim/.idea/vcs.xml
+.editorconfig
