--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ crashlytics-build.properties
 .editorconfig
 /.vscode
 /.idea
+Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Bangers SDF.asset
