--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ crashlytics-build.properties
 /.idea
 Assets/TextMesh Pro/Examples & Extras/Resources/Fonts & Materials/Bangers SDF.asset
 /Assets/TextMesh Pro
+/.config
+/.vscode
